updated to phaser-ce-2.8.8

--- a/toddler/public/index.html
+++ b/toddler/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Toddler</title>
-    <script src="./libs/phaser.js"></script>
+    <script src="./libs/phaser.min.js"></script>
     <script src="bundle.js"></script>
     <style>
         body {
