--- a/advanced-phaser/public/index.html
+++ b/advanced-phaser/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Phaser and TypeScript</title>
-    <script src="./libs/phaser.js"></script>
+    <script src="./libs/phaser.min.js"></script>
     <script src="bundle.js"></script>
 </head>
 <body>
