--- a/making-your-first-phaser-game/public/index.html
+++ b/making-your-first-phaser-game/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Making your first Phaser game</title>
-    <script src="./libs/phaser.js"></script>
+    <script src="./libs/phaser.min.js"></script>
     <script src="bundle.js"></script>
     <style>
         body {
