--- a/top-down-game/public/index.html
+++ b/top-down-game/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Top Down Game</title>
-    <script src="./libs/phaser.js"></script>
+    <script src="./libs/phaser.min.js"></script>
     <script src="bundle.js"></script>
     <style>
         body {
